# pypandora

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: mypy.yml  release.yml
docs/source/: api_reference.rst  conf.py  index.rst
pypandora/: __init__.py  api.py
tests/: test_web.py
