[project]
name = "pypandora"
version = "1.9.4"
description = "Python CLI and module for pandora"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.4)"
]

[project.urls]
repository = "https://github.com/pandora-analysis/pypandora"
documentation = "https://pypandora.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
pandora = 'pypandora:main'

[project.optional-dependencies]
docs = ["Sphinx (>=8.2.3) ; python_version >= \"3.11\""]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
types-requests = "^2.32.4.20250611"
pytest = ">=7.4.4,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
