[project]
name = "pypandora"
version = "1.12.0"
description = "Python CLI and module for pandora"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.34.2)"
]

[project.urls]
repository = "https://github.com/pandora-analysis/pypandora"
documentation = "https://pypandora.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
pandora = 'pypandora:main'

[project.optional-dependencies]
docs = ["Sphinx (>=9.1.0) ; python_version >= \"3.12\""]

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
types-requests = "^2.33.0.20260513"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
